small fix in box component

--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -12,6 +12,7 @@ $rose: hsl(335, 100%, 65%);
 
 //breakpoints
 $breakpoints: (
+    'smallScreen': 23.1em,
     'phone': 42em,
     'tablet': 55em,
     'desktop': 70em,
