--- a/src/scss/components/_box.scss
+++ b/src/scss/components/_box.scss
@@ -21,13 +21,18 @@
     }
 
     &__fylo {
-        padding: 40px 90px 40px 40px;
+        padding: 40px 60px 40px 40px;
         margin-bottom: 20px;
-        width: 320px;
+        max-width: 320px;
         flex: 0 0 auto;
+
+        @include breakmedia('smallScreen') {
+            padding-right: 90px;
+        }
 
         @include  breakmedia('tablet'){
             margin-bottom: 0;
+            flex: 1;
         }
     }
 
