--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -10,7 +10,9 @@ body {
     min-height: 100vh;
     width: 100%;
     min-width: 320px;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
+    position: relative;
     background-image: url("/src/images/bg-mobile.svg");
     background-size: cover;
 
@@ -26,12 +28,11 @@ body {
     font-size: 12px;
     text-align: center;
     position: absolute;
-    height: auto;
-	overflow: auto;
 	margin: auto;
 	left: 0;
-	bottom: 10px; 
+	bottom: 0px; 
     right: 0;
+    margin-bottom: 10px;
 
     p:first-child {
         padding-bottom: 5px;
